gatekeeper_policy/check_image_tag/check_image_tag_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1

kind: K8sImageTagValid

metadata:
  name: valid-image-tag
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces: ["*"]
